Change the aspx to cshtml. The masterPage to layout.

--- a/NewsFeed/Views/Feed/AddFeedForm.cshtml
+++ b/NewsFeed/Views/Feed/AddFeedForm.cshtml
@@ -1,4 +1,5 @@
-<%@ Control Language="C#" Inherits="System.Web.Mvc.ViewUserControl<RSSReader.Models.Feed>" %>
+@Model RSSReader.Models.Feed
+
 <% using (Html.BeginForm("Add", "Feed"))
    {
     %>
