--- a/NewsFeed/Views/Feed/ChannelPanel.cshtml
+++ b/NewsFeed/Views/Feed/ChannelPanel.cshtml
@@ -1,13 +1,14 @@
-<%@ Control Language="C#" Inherits="System.Web.Mvc.ViewUserControl<List<RSSReader.Models.NewsItem>>" %>
-<div class="channelPanelContainer">
-    <div class="channelPanelBody">
-        <%
-        foreach(var newsItem in Model)
-        {
+@Model List<RSSReader.Models.NewsItem>
+
+    <div class="channelPanelContainer">
+        <div class="channelPanelBody">
+            <%
+            foreach(var newsItem in Model)
+            {
             %>
             <div class="newsItem">
                 <div class="span-12">
-                <a href="<%=Html.Encode(newsItem.Url)%>" class="newsItem"><%=Html.Encode(newsItem.Headline) %></a>
+                    <a href="<%=Html.Encode(newsItem.Url)%>" class="newsItem"><%=Html.Encode(newsItem.Headline) %></a>
                 </div>
                 <div class="span-6 last date">
                     <%=Html.Encode(newsItem.DatePublished.ToShortDateString())%>
@@ -15,7 +16,7 @@
                 </div>
             </div>
             <%
-        }
-        %>
+            }
+            %>
+        </div>
     </div>
-</div>
