Edit layout and Index. Fix Register.

--- a/NewsFeed/Views/Home/Index.cshtml
+++ b/NewsFeed/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿News APP
-
+﻿
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Home";
+    ViewBag.Title = "NewsFeed App";
 }
 <div class="splashcontainer">
     <div class="container">
@@ -21,12 +20,12 @@
 <div class="container featuresetc">
     <div class="span-8">
         <h3>About</h3>
-        NewsApp lets you keep up with your favourite websites and news feeds from inside your browser and access them anytime you're on the web.
-        NewsApp was written over a weekend as part of an coding test. It is built on the ASP.NET MVC Framework using C#, jQuery and MSSQL.
+        NewsFeed App lets you keep up with your favourite websites and news feeds from inside your browser and access them anytime you're on the web.
+        NewsFeed App was written over a weekend as part of an coding test. It is built on the ASP.NET MVC Framework using C#, jQuery and MSSQL.
     </div>
     <div class="span-8">
         <h3>Features</h3>
-        NewsApp has a host of useful features. Including:
+        NewsFeed App has a host of useful features. Including:
         <ul>
             <li>Subscribe to feeds</li>
             <li>Unsubscribe from feeds</li>
