Edit the Views, add razor. Added MembershipProvider.

--- a/NewsFeed/Views/Feed/Add.cshtml
+++ b/NewsFeed/Views/Feed/Add.cshtml
@@ -4,5 +4,5 @@ Add Feed : RSSReader
 
 <div class="container">
     <h2>Add Feed</h2>
-    <% Html.RenderPartial("AddFeedForm"); %>
+    @Html.Partial("AddFeedForm");
 </div>
