--- a/NewsFeed/Views/Feed/AddFeedForm.cshtml
+++ b/NewsFeed/Views/Feed/AddFeedForm.cshtml
@@ -1,18 +1,14 @@
 @Model RSSReader.Models.Feed
 
-<% using (Html.BeginForm("Add", "Feed"))
+ @using (Html.BeginForm("Add", "Feed"))
    {
-    %>
     <label>
         Feed url:
-        <%=Html.TextBox("Url")%>
+        @Html.TextBox("Url")
     </label>
     <input type="submit" value="Add" />
     <div class="addFailure">
         There was a problem adding that feed. Please check the URL and try again.
     </div>
-    <%=Html.ActionLink("cancel", "Index", null, new { @class = "cancel" })%>
-    
-    <%
-   };
-%>
+    @Html.ActionLink("cancel", "Index", null, new { @class = "cancel" })
+   }
