--- a/NewsFeed/Views/Feed/ChannelPanel.cshtml
+++ b/NewsFeed/Views/Feed/ChannelPanel.cshtml
@@ -2,21 +2,19 @@
 
     <div class="channelPanelContainer">
         <div class="channelPanelBody">
-            <%
-            foreach(var newsItem in Model)
+            
+            @foreach(var newsItem in Model)
             {
-            %>
+           
             <div class="newsItem">
                 <div class="span-12">
-                    <a href="<%=Html.Encode(newsItem.Url)%>" class="newsItem"><%=Html.Encode(newsItem.Headline) %></a>
+                    <a href="@Html.Encode(newsItem.Url)" class="newsItem">@Html.Encode(newsItem.Headline)</a>
                 </div>
                 <div class="span-6 last date">
-                    <%=Html.Encode(newsItem.DatePublished.ToShortDateString())%>
-                    <%=Html.Encode(newsItem.DatePublished.ToShortTimeString())%>
+                    @Html.Encode(newsItem.DatePublished.ToShortDateString())
+                    @Html.Encode(newsItem.DatePublished.ToShortTimeString())
                 </div>
             </div>
-            <%
             }
-            %>
         </div>
     </div>
