--- a/NewsFeed/Views/Feed/DeleteFeedForm.cshtml
+++ b/NewsFeed/Views/Feed/DeleteFeedForm.cshtml
@@ -1,12 +1,9 @@
     @Model RSSReader.Models.Feed
 
-    Are you sure you want to delete the feed '<span class="feedName"><%=Html.Encode(Model.Name) %></span>'?
-    <%
-    using (Html.BeginForm())
+    Are you sure you want to delete the feed '<span class="feedName">@Html.Encode(Model.Name)</span>'?
+    
+    @using (Html.BeginForm())
     {
-    %>
     <input type="submit" value="OK" name="deleteButton" />
-    <%=Html.ActionLink("cancel", "Index", null, new { @class = "cancel" })%>
-    <%
+    @Html.ActionLink("cancel", "Index", null, new { @class = "cancel" })
     }
-    %>
