--- a/NewsFeed/Views/Feed/Add.cshtml
+++ b/NewsFeed/Views/Feed/Add.cshtml
@@ -1,8 +1,6 @@
-@Model RSSReader.Models.Feed
-
-Add Feed : RSSReader
+@model RSSReader.Models.Feed
 
 <div class="container">
     <h2>Add Feed</h2>
-    @Html.Partial("AddFeedForm");
+    @Html.Partial("AddFeedForm")
 </div>
