--- a/NewsFeed/Views/Feed/ChannelPanel.cshtml
+++ b/NewsFeed/Views/Feed/ChannelPanel.cshtml
@@ -1,4 +1,4 @@
-@Model List<RSSReader.Models.NewsItem>
+@model List<RSSReader.Models.NewsItem>
 
     <div class="channelPanelContainer">
         <div class="channelPanelBody">
