--- a/NewsFeed/Views/Feed/Delete.cshtml
+++ b/NewsFeed/Views/Feed/Delete.cshtml
@@ -1,7 +1,5 @@
 
-    @Model RSSReader.Models.Feed
-
-    Delete : RSSReader
+    @model RSSReader.Models.Feed
     
     <div class="container">
         <h2>Are you sure?</h2>
