--- a/NewsFeed/Views/Feed/DeleteFeedForm.cshtml
+++ b/NewsFeed/Views/Feed/DeleteFeedForm.cshtml
@@ -1,4 +1,4 @@
-    @Model RSSReader.Models.Feed
+    @model RSSReader.Models.Feed
 
     Are you sure you want to delete the feed '<span class="feedName">@Html.Encode(Model.Name)</span>'?
     
