--- a/NewsFeed/Views/Home/Index.cshtml
+++ b/NewsFeed/Views/Home/Index.cshtml
@@ -31,8 +31,7 @@
             <li>Unsubscribe from feeds</li>
             <li>Read feeds</li>
             <li>Search feeds</li>
-            <li>See the prerequisites....?!</li>
-
+            <li>Compatible with: Atom, RDF and RSS</li>
         </ul>
     </div>
 </div>
