--- a/NewsFeed/Views/Shared/_Layout.cshtml
+++ b/NewsFeed/Views/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <!--[if lt IE 8]><link rel="stylesheet" href="../../Content/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
     <link rel="Stylesheet" href="../../Content/RSSReader.css" type="text/css" media="screen" />
     <link href="../../Content/jquery-ui-1.7.2.custom.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="../../Scripts/jquery-1.3.2.js"></script>
-    <script type="text/javascript" src="../../Scripts/jquery-ui-1.7.2.min.js"></script>
+    <script type="text/javascript" src="../../Scripts/jquery-3.3.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
     <script src="../../Scripts/Plugins/rssAddFeedDialog.js" type="text/javascript"></script>
     <script src="../../Scripts/Plugins/rssDeleteFeedDialog.js" type="text/javascript"></script>
     <script src="../../Scripts/Plugins/rssFeedListPanel.js" type="text/javascript"></script>
